--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ scripts/step00_experimentDev/create_jitter/.ipynb_checkpoints/
 scripts/step00_experimentDev/create_socialcues/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 scripts/step00_experimentDev/create_socialcues/.ipynb_checkpoints/create_social_ratings_ver-02-checkpoint.ipynb
 scripts/step02_calculateDegrees/.ipynb_checkpoints/
+design/jitter
+design/counterbalance/
